--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 <body>
 
-<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  intent="WELCOME"
-  chat-title="Booking"
-  agent-id="ffa4c84d-5b1d-42e8-87b1-b6f99c375f44"
-  language-code="en"
-></df-messenger>
-
+<!-- Include the Dialogflow Web Messenger element in your HTML -->
+  <df-messenger
+  chat-title="TestBooking"
+  agent-id="1dc78c0c-026d-4184-8e02-0afa8ed04930"
+  language-code="en">
+  </df-messenger>
+  <script>
+     const dfMessenger = document.querySelector('df-messenger');
+     dfMessenger.setAttribute('config', '{"projectId": "testbooking-olfm"}');
+  </script>
 <!doctype html><!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" > <![endif]--><!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en" >        <![endif]--><!--[if IE 8]>    <html class="no-js lt-ie9" lang="en" >               <![endif]--><!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]--><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
