--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <body>
 
-<!-- Include the Dialogflow Web Messenger element in your HTML -->
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
-  chat-title="TestBooking"
+  chat-title="MealTicket"
   agent-id="1dc78c0c-026d-4184-8e02-0afa8ed04930"
   language-code="en"
 ></df-messenger>
